<resources>
    <string name="app_name">Application</string>
    <string name="qualification">Qualification : BE</string>
    <string name="facebook">Facebook Id :Shravana Patil</string>
    <string name="twitter">Email Id :shravanaspatil1997@gmail.com</string>
    <string name="design">How to make Desion : The mood someone has works as "a retrieval cue" whereby happy feelings make positive materials come to mind which in turn have great impact on the decisions that are made. ... Bowen and others stated that emotions and feelings cannot be extracted from the human mind.Decision making is a key skill in the workplace, and is particularly important if you want to be an effective leader. Whether you are deciding which person to hire, which supplier to use, or which strategy to pursue, the ability to make a good decision with available information is vital.</string>
    <string name="name">Shravana Patil</string>
</resources>
